--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
       </div>
     </div>
     <audio src="windows95-sound.mp3" id="my_audio"></audio>
+    <style>
+      .player {
+        width: 350px;
+      }
+    </style>
     <div id="root"></div>
     <!--
       This HTML file is a template.
